# nba

./: .env.dev  .env.preprod  .env.prod  .env.recette  .gitignore  .pre-commit-config.yaml  Makefile  README.md  create_project.py  mypy.ini  project_structure.yaml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_script.bat  run_script.sh
.github/workflows/: python_ci.yml
conf/: data_analyse.json  load_data_from_api.json  nba.json  site_report.json  web_discover.json  web_scraper.json
data/describe/: 20XX-YY_pbp_describe.json  games_describe.json  games_details_describe.json  players_describe.json  ranking_describe.json  teams_describe.json
locales/en/LC_MESSAGES/: messages.po
locales/fr/LC_MESSAGES/: messages.po
src/modules/: init_app.py
src/modules/models/: __init__.py
src/modules/preprocessing/: __init__.py
src/modules/reporting/: reporting_utils.py
src/modules/utils/: __init__.py  data_tools.py  file_tools.py  logger_tools.py
src/scripts/: analyse_js.py  analyse_page_web.py  analyse_xhr.py  data_analyse.py  first_analysis.py  load_data_from_api.py  web_discover.py  web_scraper.py
tests/: test_data_tools.py  test_file_tools.py  test_logger_tools.py
